2007-05-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/robusttransaction.cxx:
  - Fixed constraint name clash in multi-user use, thanks anonymous
 test/test092.cxx:
  - Test "one parameter per line" style of invoking prepared statements
2007-04-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx:
  - m_statement shouldn't be a reference, thanks John Mudd
2007-04-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/result.cxx:
  - Missing include: cstdlib, thanks Martin Michlmayr
2007-03-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablewriter.hxx:
  - A bit more explanation about column lists
2007-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Compile fix for libpq without PQserverVersion()
2007-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/common-sample, win32/vc-libpqxx.mak.template:
  - Removed quotes to fix problems with spaces, thanks Curran Schiefelbein
  - Thanks Bart Samwel for confirming
2007-02-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
  - Check for PQclientEncoding()
  - Check for PQmblen()
 include/pqxx/connection_base.hxx, include/pqxx/result.hxx,
 src/connection_base.cxx, src/cursor.cxx, src/pipeline.cxx, src/result.cxx,
 src/tablereader.cxx:
  - Keep track of client encoding in connections and results
 src/util.cxx:
  - Oops: strlcpy() is supposed to return something
 include/pqxx/transaction.hxx, include/pqxx/trigger.hxx, src/tablewriter.cxx:
  - Updated copyright notices
2007-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, src/util.cxx:
  - Use strlcpy() instead of strncpy() where available
2007-02-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - freemem_result_data() needs PQXX_LIBEXPORT, thanks drankevich@cosmostv.by
 tools/pqxx-fulltest:
  - Use pqxx.org instead of full thaiopensource.org URL
  - Ensure that local postgres instance is private
 win32/vc-libpqxx.mak.template: