@@ -1,3 +1,6 @@
+2007-05-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/compiler-public.hxx, win32/INSTALL.txt:
+  - Define PQXX_PQ_STATIC to link to static libpq in Windows.  Thanks JuJu.
 2007-05-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/robusttransaction.cxx:
   - Fixed constraint name clash in multi-user use, thanks anonymous
